Base Backend Project Setup

--- a/apps/party-time-backend/pom.xml
+++ b/apps/party-time-backend/pom.xml
@@ -21,6 +21,7 @@
     <java.version>17</java.version>
 
     <springdoc.version>2.1.0</springdoc.version>
+    <jwt-api.version>0.11.5</jwt-api.version>
   </properties>
 
   <dependencies>
@@ -50,10 +51,25 @@
       <scope>runtime</scope>
     </dependency>
 
-
+    <!-- Security -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt-api</artifactId>
+      <version>${jwt-api.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt-impl</artifactId>
+      <version>${jwt-api.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt-jackson</artifactId>
+      <version>${jwt-api.version}</version>
     </dependency>
 
     <!-- DevTooling -->
