--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -32,7 +32,10 @@
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
+	"forwardPorts": [
+		4200,
+		8080
+	],
 	// Use 'postCreateCommand' to run commands after the container is created.
 	"postCreateCommand": "sh /workspaces/party-time/.devcontainer/postCreateCommand.sh",
 	// Configure tool-specific properties.
@@ -50,9 +53,26 @@
 				"firefox-devtools.vscode-firefox-debug",
 				"ms-edgedevtools.vscode-edge-devtools",
 				"eamodio.gitlens",
-				"ms-vsliveshare.vsliveshare"
-			]
-		}
+				"ms-vsliveshare.vsliveshare",
+				"rangav.vscode-thunder-client",
+				"github.copilot",
+				"github.copilot-labs",
+				"github.vscode-pull-request-github"
+			],
+			"settings": {
+				"css.lint.unknownAtRules": "ignore",
+				"scss.lint.unknownAtRules": "ignore",
+				"markdownlint.config": {
+					"default": true,
+					"MD025": false,
+					"MD033": false,
+					"no-hard-tabs": false
+				},
+				"[markdown]": {
+					"editor.defaultFormatter": "DavidAnson.vscode-markdownlint"
+				}
+			},
+		},
 	},
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
