--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nrwl/jest": "15.9.2",
     "@nrwl/js": "15.9.2",
     "@nrwl/linter": "15.9.2",
+    "@nrwl/nx-cloud": "^15.3.5",
     "@nrwl/web": "15.9.2",
     "@nrwl/workspace": "15.9.2",
     "@nxrocks/nx-spring-boot": "^6.3.0",
