--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
+    "@vercel/remote-nx": "^1.0.1",
     "autoprefixer": "^10.4.0",
     "cypress": "^12.2.0",
     "eslint": "~8.15.0",
