--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@party-time/models": ["libs/models/src/index.ts"],
       "@party-time/ui": ["libs/ui/src/index.ts"]
     }
   },
