--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "jest-preset-angular": "~13.0.0",
     "nx": "15.9.2",
     "postcss": "^8.4.5",
-    "prettier": "^2.6.2",
+    "prettier": "^2.8.7",
+    "prettier-plugin-tailwindcss": "^0.2.7",
     "tailwindcss": "^3.0.2",
     "ts-jest": "^29.0.5",
     "ts-node": "10.9.1",
