--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@angular/platform-browser-dynamic": "~15.2.0",
     "@angular/router": "~15.2.0",
     "@nrwl/angular": "15.9.2",
+    "@types/gsap": "^3.0.0",
+    "gsap": "^3.11.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
