--- a/package.json
+++ b/package.json
@@ -36,10 +36,17 @@
     "@nrwl/js": "15.9.2",
     "@nrwl/linter": "15.9.2",
     "@nrwl/nx-cloud": "^15.3.5",
+    "@nrwl/storybook": "15.9.2",
     "@nrwl/web": "15.9.2",
     "@nrwl/workspace": "15.9.2",
     "@nxrocks/nx-spring-boot": "^6.3.0",
     "@schematics/angular": "~15.2.0",
+    "@storybook/addon-essentials": "^6.5.15",
+    "@storybook/angular": "^6.5.15",
+    "@storybook/builder-webpack5": "^6.5.15",
+    "@storybook/core-common": "^6.5.15",
+    "@storybook/core-server": "^6.5.15",
+    "@storybook/manager-webpack5": "^6.5.15",
     "@types/jest": "^29.4.0",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
@@ -50,6 +57,7 @@
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "html-webpack-plugin": "^5.5.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-preset-angular": "~13.0.0",
@@ -60,6 +68,7 @@
     "tailwindcss": "^3.0.2",
     "ts-jest": "^29.0.5",
     "ts-node": "10.9.1",
-    "typescript": "~4.9.5"
+    "typescript": "~4.9.5",
+    "webpack": "^5.64.0"
   }
 }
