--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/gsap": "^3.0.0",
     "gsap": "^3.11.5",
     "rxjs": "~7.8.0",
+    "storybook-addon-angular-router": "^1.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
@@ -41,11 +42,12 @@
     "@nrwl/workspace": "15.9.2",
     "@nxrocks/nx-spring-boot": "^6.3.0",
     "@schematics/angular": "~15.2.0",
-    "@storybook/addon-essentials": "^6.5.15",
-    "@storybook/angular": "^6.5.15",
-    "@storybook/builder-webpack5": "^6.5.15",
-    "@storybook/core-common": "^6.5.15",
-    "@storybook/core-server": "^6.5.15",
+    "@storybook/addon-essentials": "^7.0.2",
+    "@storybook/addon-links": "^7.0.2",
+    "@storybook/angular": "^7.0.2",
+    "@storybook/builder-webpack5": "^7.0.2",
+    "@storybook/core-common": "^7.0.2",
+    "@storybook/core-server": "^7.0.2",
     "@storybook/manager-webpack5": "^6.5.15",
     "@types/jest": "^29.4.0",
     "@types/node": "16.11.7",
