--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@types/gsap": "^3.0.0",
     "gsap": "^3.11.5",
     "rxjs": "~7.8.0",
-    "storybook-addon-angular-router": "^1.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
@@ -42,13 +41,13 @@
     "@nrwl/workspace": "15.9.2",
     "@nxrocks/nx-spring-boot": "^6.3.0",
     "@schematics/angular": "~15.2.0",
+    "@storybook/addon-actions": "^7.0.2",
     "@storybook/addon-essentials": "^7.0.2",
     "@storybook/addon-links": "^7.0.2",
+    "@storybook/addon-mdx-gfm": "^7.0.2",
     "@storybook/angular": "^7.0.2",
-    "@storybook/builder-webpack5": "^7.0.2",
     "@storybook/core-common": "^7.0.2",
     "@storybook/core-server": "^7.0.2",
-    "@storybook/manager-webpack5": "^6.5.15",
     "@types/jest": "^29.4.0",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
@@ -59,6 +58,7 @@
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-storybook": "^0.6.11",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
