--- a/apps/party-time-backend/src/main/resources/application.yml
+++ b/apps/party-time-backend/src/main/resources/application.yml
@@ -12,3 +12,15 @@ spring:
     open-in-view: true
     database: h2
     defer-datasource-initialization: true
+  web:
+    locale: en
+    locale-resolver: fixed
+springdoc:
+  default-consumes-media-type: application/json
+  default-produces-media-type: application/json
+  web:
+    locale: en
+    locale-resolver: fixed
+springdoc:
+  default-consumes-media-type: application/json
+  default-produces-media-type: application/json
