--- a/apps/party-time-backend/pom.xml
+++ b/apps/party-time-backend/pom.xml
@@ -39,6 +39,10 @@
       <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
       <version>${springdoc.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-mail</artifactId>
+    </dependency>
 
     <!-- Database -->
     <dependency>
