--- a/.github/workflows/party-time-pipeline.yml
+++ b/.github/workflows/party-time-pipeline.yml
@@ -15,6 +15,8 @@ jobs:
     with:
       main-branch-name: main
       number-of-agents: 3
+      environment-variables: |
+        JAVA_HOME=$JAVA_HOME_17_X64
       init-commands: |
         npx nx-cloud start-ci-run --stop-agents-after="build" --agent-count=3
       parallel-commands: |
@@ -29,3 +31,5 @@ jobs:
     uses: nrwl/ci/.github/workflows/nx-cloud-agents.yml@v0.11.3
     with:
       number-of-agents: 3
+      environment-variables: |
+        JAVA_HOME=$JAVA_HOME_17_X64
