--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,5 +39,5 @@
       "rules": {}
     }
   ],
-  "extends": [null, "plugin:storybook/recommended"]
+  "extends": ["plugin:storybook/recommended"]
 }
