--- a/.editorconfig
+++ b/.editorconfig
@@ -1,12 +1,21 @@
-# Editor configuration, see http://editorconfig.org
+# EditorConfig is awesome: https://EditorConfig.org
+
+# top-most EditorConfig file
 root = true
 
+# Unix-style newlines with a newline ending every file
 [*]
-charset = utf-8
+end_of_line = lf
+insert_final_newline = true
+
+# 4 space indentation
+[*.{js,ts,jsx,tsx}]
 indent_style = space
 indent_size = 2
-insert_final_newline = true
-trim_trailing_whitespace = true
+
+[package.json]
+indent_style = space
+indent_size = 2
 
 [*.md]
 max_line_length = off
