--- a/apps/party-time-backend/src/main/resources/application.yml
+++ b/apps/party-time-backend/src/main/resources/application.yml
@@ -20,6 +20,9 @@ spring:
     port: 587
     username: lucas@dangl.io
     password: 5J6fBw3zRADv0n7C
+  mustache:
+    prefix: classpath:/mail/
 springdoc:
   default-consumes-media-type: application/json
   default-produces-media-type: application/json
+
