--- a/apps/party-time-backend/src/main/resources/application.yml
+++ b/apps/party-time-backend/src/main/resources/application.yml
@@ -11,7 +11,10 @@ spring:
       ddl-auto: update
     open-in-view: true
     database: h2
+  h2:
     defer-datasource-initialization: true
+    console:
+      enabled: true
   web:
     locale: en
     locale-resolver: fixed
@@ -25,4 +28,6 @@ spring:
 springdoc:
   default-consumes-media-type: application/json
   default-produces-media-type: application/json
-
+party-time:
+  mail:
+    enabled: true
