--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@storybook/angular": "^7.0.2",
     "@storybook/core-common": "^7.0.2",
     "@storybook/core-server": "^7.0.2",
+    "@tailwindcss/forms": "^0.5.3",
     "@types/jest": "^29.4.0",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
