--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@party-time/account": ["libs/account/src/index.ts"],
       "@party-time/landing": ["libs/landing/src/index.ts"],
       "@party-time/models": ["libs/models/src/index.ts"],
       "@party-time/not-found": ["libs/not-found/src/index.ts"],
