--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "@angular/platform-browser": "~15.2.0",
     "@angular/platform-browser-dynamic": "~15.2.0",
     "@angular/router": "~15.2.0",
+    "@ngrx/component-store": "~15.3.0",
+    "@ngrx/effects": "~15.3.0",
+    "@ngrx/entity": "~15.3.0",
+    "@ngrx/router-store": "~15.3.0",
+    "@ngrx/store": "~15.3.0",
     "@nrwl/angular": "15.9.2",
     "@types/gsap": "^3.0.0",
     "gsap": "^3.11.5",
@@ -30,6 +35,8 @@
     "@angular/cli": "~15.2.0",
     "@angular/compiler-cli": "~15.2.0",
     "@angular/language-service": "~15.2.0",
+    "@ngrx/schematics": "~15.3.0",
+    "@ngrx/store-devtools": "~15.3.0",
     "@nrwl/cypress": "15.9.2",
     "@nrwl/eslint-plugin-nx": "15.9.2",
     "@nrwl/jest": "15.9.2",
@@ -61,6 +68,7 @@
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-storybook": "^0.6.11",
     "html-webpack-plugin": "^5.5.0",
+    "jasmine-marbles": "~0.9.1",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-preset-angular": "~13.0.0",
