--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -32,7 +32,7 @@
   // Features to add to the dev container. More info: https://containers.dev/features.
   // "features": {},
   // Use 'forwardPorts' to make a list of ports inside the container available locally.
-  //"forwardPorts": [4200, 4400, 4401, 8080],
+  "forwardPorts": [],
   // Use 'postCreateCommand' to run commands after the container is created.
   "postCreateCommand": "sh /workspaces/party-time/.devcontainer/postCreateCommand.sh",
   // Configure tool-specific properties.
@@ -52,11 +52,13 @@
         "eamodio.gitlens",
         "ms-vsliveshare.vsliveshare",
         "bradlc.vscode-tailwindcss",
-        "rangav.vscode-thunder-client"
+        "rangav.vscode-thunder-client",
+        "github.vscode-pull-request-github"
       ],
       "settings": {
         "prettier.configPath": ".prettierrc",
-        "prettier.resolveGlobalModules": true
+        "prettier.resolveGlobalModules": true,
+        "remote.restoreForwardedPorts": true
       }
     }
   }
