fix: mail template

--- a/apps/party-time-backend/src/main/resources/application.yml
+++ b/apps/party-time-backend/src/main/resources/application.yml
@@ -29,6 +29,6 @@ springdoc:
   default-produces-media-type: application/json
 party-time:
   mail:
-    enabled: true
+    enabled: false
 server:
   port: 8090
