--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -19,9 +19,8 @@ jobs:
         with:
           # Starts web server for E2E tests - replace with your own server invocation
           # https://docs.cypress.io/guides/continuous-integration/introduction#Boot-your-server
-          start: npx nx run party-time-frontend-e2e:e2e
+          start: npm start
           wait-on: 'http://localhost:4200'
-          wait-on-timeout: 120s # Waits for above
           # Records to Cypress Cloud 
           # https://docs.cypress.io/guides/cloud/projects#Set-up-a-project-to-record
           record: true
