--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -18,7 +18,7 @@ jobs:
         uses: cypress-io/github-action@v5
         with:
           browser: chrome
-          start: nx run party-time-frontend-e2e:e2e
+          start: npx cypress open
           config-file: apps/party-time-frontend-e2e/cypress.config.ts
         env:
           # For recording and parallelization to work you must set your CYPRESS_RECORD_KEY
