--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -15,12 +15,14 @@ jobs:
         uses: actions/checkout@v3
       - name: Cypress run
         # Uses the official Cypress GitHub action https://github.com/cypress-io/github-action
-        uses: cypress-io/github-action@v5
+        uses: cypress-io/github-action@v4
         with:
-          browser: chrome
-          config-file: apps/party-time-frontend-e2e/cypress.config.ts
-          
-
+          # Starts web server for E2E tests - replace with your own server invocation
+          # https://docs.cypress.io/guides/continuous-integration/introduction#Boot-your-server
+          start: npx nx run party-time-frontend-e2e:e2e --tsConfig=apps/party-time-frontend-e2e/
+          # Records to Cypress Cloud 
+          # https://docs.cypress.io/guides/cloud/projects#Set-up-a-project-to-record
+          parallel: true # Runs test in parallel using settings above
         env:
           # For recording and parallelization to work you must set your CYPRESS_RECORD_KEY
           # in GitHub repo → Settings → Secrets → Actions
