--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           # Starts web server for E2E tests - replace with your own server invocation
           # https://docs.cypress.io/guides/continuous-integration/introduction#Boot-your-server
-          start: nx run party-time-frontend:serve
+          start: npx nx run party-time-frontend:serve
           # Runs E2E tests
           # https://docs.cypress.io/guides/continuous-integration/introduction#Run-your-tests
           wait-on: 'http://localhost:4200'
