--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gsap": "^3.11.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "wait-on": "^7.0.1",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
