--- a/.github/workflows/party-time-pipeline.yml
+++ b/.github/workflows/party-time-pipeline.yml
@@ -21,7 +21,8 @@ jobs:
         npx nx affected --target=lint --parallel=3
         npx nx affected --target=test --parallel=3 --ci --code-coverage
         npx nx affected --target=build --parallel=3
-
+        npx nx affected --target=e2e --parallel=3 --ci
+        
   agents:
     name: Nx Cloud - Agents
     uses: ./.github/workflows/nx-cloud-agents.yml
