--- a/.github/workflows/party-time-pipeline.yml
+++ b/.github/workflows/party-time-pipeline.yml
@@ -12,18 +12,19 @@ jobs:
     uses: nrwl/ci/.github/workflows/nx-cloud-main.yml@v0.11.3
     with:
       main-branch-name: main
-      number-of-agents: 3
+      number-of-agents: 4
       init-commands: |
-        npx nx-cloud start-ci-run --stop-agents-after="build" --agent-count=3
+        npx nx-cloud start-ci-run --stop-agents-after="build" --agent-count=4
       parallel-commands: |
         npx nx-cloud record -- npx nx format:check
       parallel-commands-on-agents: |
-        npx nx affected --target=lint --parallel=3
-        npx nx affected --target=test --parallel=3 --ci --code-coverage
-        npx nx affected --target=build --parallel=3
+        npx nx affected --target=lint --parallel=4
+        npx nx affected --target=test --parallel=4 --ci --code-coverage
+        npx nx affected --target=build --parallel=4
+        npx nx affected --target=e2e --parallel=4 --ci
 
   agents:
     name: Nx Cloud - Agents
     uses: ./.github/workflows/nx-cloud-agents.yml
     with:
-      number-of-agents: 3
+      number-of-agents: 4
