fix: Correct Domain for Verification Link

--- a/apps/party-time-backend/src/main/resources/application.yml
+++ b/apps/party-time-backend/src/main/resources/application.yml
@@ -28,6 +28,7 @@ springdoc:
   default-consumes-media-type: application/json
   default-produces-media-type: application/json
 party-time:
+  url: http://localhost:4200
   mail:
     enabled: false
 server:
