--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,7 +19,8 @@
       "@party-time/models": ["libs/models/src/index.ts"],
       "@party-time/not-found": ["libs/not-found/src/index.ts"],
       "@party-time/register": ["libs/register/src/index.ts"],
-      "@party-time/ui": ["libs/ui/src/index.ts"]
+      "@party-time/ui": ["libs/ui/src/index.ts"],
+      "@party-time/verify": ["libs/verify/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
