--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,20 @@
 {
     "configurations": [
         {
+            "type": "java",
+            "name": "Launch Backend",
+            "request": "launch",
+            "mainClass": "com.partytime.PartyTimeBackendApplication",
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "name": "Launch Swagger",
+            "type": "chrome",
+            "request": "launch",
+            "url": "http://localhost:8090/swagger-ui.html",
+            "webRoot": "${workspaceFolder}"
+        },
+        {
             "name": "Launch FireFox",
             "type": "firefox",
             "request": "launch",
