--- a/apps/party-time-backend/src/test/resources/application.yml
+++ b/apps/party-time-backend/src/test/resources/application.yml
@@ -15,3 +15,6 @@ spring:
   h2:
     console:
       enabled: false
+party-time:
+  jwt:
+    secret: pJADh3HysJ0dbNNnvfTub2vnus9pg7ddP894ZFcyKu72XmX78qU97yuvpOuwEcoe
