improved html template

--- a/apps/party-time-backend/src/main/resources/application.yml
+++ b/apps/party-time-backend/src/main/resources/application.yml
@@ -32,6 +32,6 @@ party-time:
   jwt:
     secret: pJADh3HysJ0dbNNnvfTub2vnus9pg7ddP894ZFcyKu72XmX78qU97yuvpOuwEcoe
   mail:
-    enabled: false
+    enabled: true
 server:
   port: 8090
