--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,8 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@party-time/account": ["libs/account/src/index.ts"],
       "@party-time/auth": ["libs/auth/src/index.ts"],
-      "@party-time/change": ["libs/change/src/index.ts"],
       "@party-time/landing": ["libs/landing/src/index.ts"],
       "@party-time/models": ["libs/models/src/index.ts"],
       "@party-time/not-found": ["libs/not-found/src/index.ts"],
