--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -67,9 +67,7 @@
         "plantuml.exportOutDir": "docs/PNG",
         "plantuml.exportIncludeFolderHeirarchy": true,
         "plantuml.exportSubFolder": false,
-        "plantuml.jarArgs": [
-            "-DPLANTUML_LIMIT_SIZE=8192"
-        ]
+        "plantuml.jarArgs": ["-DPLANTUML_LIMIT_SIZE=8192"]
       }
     }
   },
