partly revert dockerfile changes & emoji deletions

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -6,7 +6,7 @@
 FROM mcr.microsoft.com/vscode/devcontainers/base:ubuntu
 
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-    && apt-get -y install default-jre graphviz libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb software-properties-common
+    && apt-get -y install default-jre graphviz libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb
     # && npm install -g prettier
 #RUN apt-get update 
     # && apt-get -y install default-jre graphviz libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb \
@@ -14,5 +14,5 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     # && npm install \
     # && ./node_modules/.bin/cypress install
 
-RUN add-apt-repository universe && apt-get update && export DEBIAN_FRONTEND=noninteractive \
-    && apt-get -y install pandoc texlive-latex-base texlive-fonts-recommended texlive-extra-utils texlive-latex-extra texlive-xetex
+RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
+    && apt-get -y install pandoc texlive-latex-base texlive-fonts-recommended texlive-extra-utils texlive-latex-extra
