export.py overhaul 2

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -50,5 +50,14 @@
             "console": "integratedTerminal",
             "justMyCode": true
         },
+        {
+            "name": "Python: Check glossary",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/export.py",
+            "args": ["-c"],
+            "console": "integratedTerminal",
+            "justMyCode": true
+        },
     ]
 }
