--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -57,7 +57,8 @@
         "rangav.vscode-thunder-client",
         "github.vscode-pull-request-github",
         "tomoki1207.pdf",
-        "ms-python.python"
+        "ms-python.python",
+        "njpwerner.autodocstring"
       ],
       "settings": {
         "prettier.configPath": ".prettierrc",
